k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: students-delete-service
spec:
  selector:
    app: students-delete
  ports:
    - protocol: TCP
      port: 8083  # Puerto interno dentro del cluster
      targetPort: 8080 # Puerto que expone el contenedor
      nodePort: 30083
  type: NodePort
